--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,12 @@
 [project]
-name = "sports"
+name = "sports-modelling"
 version = "0.1.0"
-description = "Add your description here"
+description = "Sports data and model management"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "cbbpy>=2.0.2",
+    "fastparquet>=2024.5.0",
+    "pandas>=2.2.3",
+    "pyarrow>=17.0.0",
+]
