--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,11 @@ dependencies = [
     "fastparquet>=2024.5.0",
     "pandas>=2.2.3",
     "pyarrow>=17.0.0",
+    "scikit-learn>=1.5.2",
+    "xgboost>=2.1.2",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "jupyter>=1.1.1",
 ]
